fixed targeted (anchored) id being unvisible (header above it)

--- a/public/style.css
+++ b/public/style.css
@@ -2864,6 +2864,10 @@ body[dir="rtl"] .checkbox:checked,
   transition-timing-function: linear;
 }
 
+:target {
+  scroll-margin-top: 100px;
+}
+
 .hover\:-translate-y-2:hover{
   --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
